--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <title>FBlock</title>
+    <title>Forging Block</title>
 </head>
 <body>
 <noscript>
     <strong>We're sorry but fblock doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
     <div id="app"></div>
-<!-- built files will be auto injected -->
+    <!-- built files will be auto injected -->
 </body>
 </html>
